Refactor to remove mentions of Oceana, added ability to set custom logo

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,7 +6,7 @@ $cta: #058ceb;
 body.has-modal {
   overflow: hidden;
 }
-.oceana-en-overlay {
+.foursite-en-overlay {
   position: fixed;
   top: 0;
   left: 0;
