--- a/src/sass/overlay.scss
+++ b/src/sass/overlay.scss
@@ -41,11 +41,26 @@
   position: relative;
   width: 100%;
   height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
+  &::before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba($bg, 0.1), rgba($bg, 0.6));
+    z-index: 0;
+    transition: opacity 0.4s ease-in-out;
+  }
   .overlay-content {
     width: 80%;
+    z-index: 1;
     h1,
     h2,
     h3,
