--- a/src/sass/overlay.scss
+++ b/src/sass/overlay.scss
@@ -54,7 +54,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba($bg, 0.1), rgba($bg, 0.6));
+    background-image: linear-gradient(var(--bg-img-overlay-start-color, rgba($bg, 0.1)), var(--bg-img-overlay-end-color, rgba($bg, 0.6)));
     z-index: 0;
     transition: opacity 0.4s ease-in-out;
   }
@@ -74,32 +74,26 @@
       max-width: 650px;
     }
     .overlay-title {
-      font-size: 60px;
-      font-family: "Good Headline Pro Condensed", "Lato", "Trebuchet MS",
-        sans-serif;
-      font-weight: 900;
-      line-height: 60px;
       letter-spacing: 0.02em;
       padding: 0;
       margin-top: 25px;
       margin-bottom: 10px;
+      color: var(--title-color, $txt);
+      font: var(--title-font, 900 60px/60px "Good Headline Pro Condensed", "Lato", "Trebuchet MS", sans-serif);
     }
     .overlay-subtitle {
-      font-size: 50px;
-      line-height: 50px;
       padding: 0;
       margin-bottom: 0;
-      font-weight: 700;
       text-transform: none;
+      color: var(--subtitle-color, $txt);
+      font: var(--subtitle-font, 700 50px/50px "Lato", "Trebuchet MS", sans-serif);
     }
     .overlay-paragraph {
-      font-family: "Good Headline Pro Condensed", "Lato", "Trebuchet MS",
-        sans-serif;
-      font-size: 30px;
-      line-height: 44px;
       padding: 0;
       margin-bottom: 0;
-      font-weight: 700;
+      color: var(--paragraph-color, $txt);
+      font: var(--paragraph-font, 700 30px/44px "Good Headline Pro Condensed", "Lato", "Trebuchet MS",
+        sans-serif);
     }
     .overlay-form {
       margin-top: 25px;
@@ -116,20 +110,17 @@
         input[type="radio"] {
           display: none;
           &:checked + label {
-            background-color: $accent;
-            color: $txt;
-            border: 3px solid $bg;
+            background-color: var(--amount-button-selected-bg-color, $accent);
+            color: var(--amount-button-selected-color, $txt);
+            border: var(--amount-button-selected-border, 3px solid $bg);
+            border-radius: var(--amount-button-selected-border-radius, 50%);
           }
         }
         label {
           padding: 0;
           font-weight: 700;
-          background-color: #1e2022;
-          border: 3px solid transparent;
-          border-radius: 50%;
           height: 66px;
           width: 66px;
-          color: $accent;
           font-size: 1.1rem;
           text-align: center;
           position: relative;
@@ -139,6 +130,17 @@
           cursor: pointer;
           box-sizing: border-box;
           transition: all 0.3s ease-in-out;
+          background-color: var(--amount-button-bg-color, #1e2022);
+          color: var(--amount-button-color, $accent);
+          border: var(--amount-button-border, 3px solid transparent);
+          border-radius: var(--amount-button-border-radius, 50%);
+
+          &:hover {
+            background-color: var(--amount-button-hover-bg-color, #1e2022);
+            color: var(--amount-button-hover-color, $accent);
+            border: var(--amount-button-hover-border, 3px solid transparent);
+            border-radius: var(--amount-button-hover-border-radius, 50%);
+          }
         }
         .form-text {
           font-family: "Lato", "Trebuchet MS", sans-serif;
@@ -159,17 +161,22 @@
       }
       button {
         width: 100%;
-        height: 50px;
-        background-color: $bg;
-        color: $txt;
+        min-height: 50px;
         font-size: 1.1rem;
+        line-height: 1;
+        box-sizing: border-box;
         font-weight: 700;
-        border: none;
         cursor: pointer;
         transition: all 0.3s ease-in-out;
+        background-color: var(--submit-button-bg-color, $bg);
+        color: var(--submit-button-color, $txt);
+        border: var(--submit-button-border, none);
+        border-radius: var(--submit-button-border-radius, 0);
         &:hover {
-          background-color: $accent;
-          color: $txt;
+          background-color: var(--submit-button-hover-bg-color, $accent);
+          color: var(--submit-button-hover-color, $txt);
+          border: var(--submit-button-hover-border, none);
+          border-radius: var(--submit-button-hover-border-radius, 0);
         }
       }
     }
@@ -177,7 +184,7 @@
       margin: 25px 0;
       padding: 0;
       border: none;
-      border-top: 5px solid $txt;
+      border-top: var(--divider-border, 5px solid $txt);
       width: 200px;
     }
   }
